--- a/style.css
+++ b/style.css
@@ -82,12 +82,12 @@
 /* Self Description area */
 
 .topnav {
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(17, 17, 17, 0.3);
     box-shadow: #111 0.4px 4px 10px;
 }
 
 .home {
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(31, 31, 31, 0.3);
 }
 
 .col-7,
